# agora-types

./: .editorconfig  .gitlint  .pre-commit-config.yaml  README.md  cabal.project  hlint.yaml  shell.nix
agora-types/: agora-types.cabal
agora-types/src/Agora/Types/: Governor.hs  IsData.hs  Proposal.hs  SafeMoney.hs  Stake.hs  Time.hs
