cabal-version:      3.6
name:               agora-types
version:            0.1.0.0
maintainer:         sk-saru
author:             saru@shinka.network

common lang
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    NoImplicitPrelude
  ghc-options:
    -Weverything -Werror
    -- For plutus
    -Wno-all-missed-specialisations
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
  build-depends:
    , base ^>=4.14.3.0

library
  import: lang
  hs-source-dirs: src
  ghc-options:
    -- For plutus-tx
    -Wno-unused-packages
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-specialise
    -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors
  exposed-modules:
    Agora.Types.IsData
    Agora.Types.Proposal
    Agora.Types.SafeMoney
    Agora.Types.Stake
    Agora.Types.Time
    Agora.Types.Governor
  build-depends:
    , aeson
    , containers
    , generics-sop
    , plutonomy
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , tagged
